# Library-Management-System

./: Makefile  a.out
Project/: CMakeLists.txt  README.md
Project/include/: addToLibrary.h  interface.h  listing.h
Project/src/: addToLibrary.c  interface.c  listing.c  main.c  main.c~  removeFromLibrary.c  test_addToLibrary.c~
Project/test/: test_addToLibrary.c  test_listing.c
Project/unity/: test_addToLibrary.c~
include/: Structures.h  addToLibrary.h  removeFromLibrary.h
src/: Makefile  addToLibrary.c  listing.c  main.c  test_addToLibrary.c
test/: test_addToLibrary.c
